--- a/Files,_exceptional_handling,_logging_and_memory_management.ipynb
+++ b/Files,_exceptional_handling,_logging_and_memory_management.ipynb
@@ -25,19 +25,19 @@
         "- In Python, multiple exceptions can occur in a try block. To ensure the program doesn't crash and responds appropriately, Python provides multiple ways to handle them.\n",
         "  1. **Multiple except blocks:** Handle each exception separately.\n",
         "try:\n",
-        "    #risky code\n",
+        "    risky code\n",
         "except ValueError:\n",
-        "    #handle ValueError\n",
+        "    handle ValueError\n",
         "except IndexError:\n",
-        "    #handle IndexError\n",
+        "    handle IndexError\n",
         "  2. **Single except with multiple exceptions:** Use a tuple if handling is the same.\n",
         "try:\n",
-        "    #risky code\n",
+        "    risky code\n",
         "except (ValueError, IndexError):\n",
-        "    #handle both\n",
+        "    handle both\n",
         "  3. **Generic exception handling:** Catches any exception (not recommended unless necessary).\n",
         "try:\n",
-        "    #risky code\n",
+        "    risky code\n",
         "except Exception as e:\n",
         "    print(\"Error:\", e)\n",
         "\n",
